examples/invalid/error_semantico_01.chs
nimais main ABRAZO RESPANDO ALMA
    cabal edad DAR 20
    chisme nombre DAR "Fernando"

    edad DAR nombre

    chotear ABRAZO "Edad: " CRUZ edad RESPANDO
CUERPO
